Commands now use CommandInfo